assume max sampleDelay is 3 days

--- a/listeriaSummary.Rmd
+++ b/listeriaSummary.Rmd
@@ -18,7 +18,11 @@ knitr::opts_chunk$set(echo = TRUE)
 require(tidyverse)
 require(bbmle)
 source('epiCurve.R')
-source('incubationDist.R')
+#source('incubationDist.R')
+sampleDelay <- 3
+bsIterations <- 200
+source('incubationDistSens.R') # Assumes samples are acquired within sampleDelay days of onset
+#source('incubationDist.R')
 source('epiFunctions.R')
 baseline <- mean(cases$count)
 recallEffect <- 0.65 # after 1 week
@@ -61,11 +65,11 @@ axis(2,seq(.2,1,.4),cex.axis=.85)
 mtext('Time since infection (days)',1,3)
 mtext('Proportion incubating',2,2.5)
 mtext('B',3,line=1,adj=-.3,font=2)
-curve(1-pgamma(x,exp(coef(estIncGamma)[1])*exp(coef(estIncGamma)[2]),exp(coef(estIncGamma)[2])),add=T,lwd=3,col='darkgreen')
-points(exp(coef(estIncGamma)[1]),1.1,pch=21,cex=1.1,xpd=T,col='darkgreen',lwd=3)
+curve(1-pgamma(x,meanIncGamma*rateIncGamma,rateIncGamma),add=T,lwd=3,col='darkgreen')
+points(meanIncGamma,1.1,pch=21,cex=1.1,xpd=T,col='darkgreen',lwd=3)
 arrows(ciIncGamma[1],1.1,ciIncGamma[2],1.1,le=.02,angle = 90,lwd=3,code = 3,col='darkgreen',xpd=T)
 mtext('Mean and 95% CI',3,line=.5,adj=1.1,font=2,col='darkgreen',cex=.8,xpd=NULL)
-abline(v=3.5+seq(0,28,7),col='red',lty=3)
+abline(v=3.5+seq(0,70,7),col='red',lty=3)
 ```
 
 Combining the temporal profile for risky exposures and the estimated distribution of the incubation period, we can begin to assess the anticipated decline in the epidemic curve as a result of increased awareness and product recall. Figure 2 shows plausible ranges for the number of cases under the assumptions of the model.
