--- a/listeriaSupplement.Rmd
+++ b/listeriaSupplement.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "Technical Supplement"
-subtitle: "Use of model-based projections during the 2017-2018 listeriosis outbreak in South Africa"
+title: "Use of model-based projections during the 2017-2018 listeriosis outbreak in South Africa"
+subtitle: "Technical Supplement"
 author: ""
 output: 
   pdf_document:
@@ -15,14 +15,14 @@ fontsize: 12pt
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
-require(tidyverse)
-require(bbmle)
+library(readxl)
+library(tidyverse)
+library(bbmle)
 source('fitFunctions.R')
 source('epiCurve.R')
 sampleDelay <- 3
 bsIterations <- 200
-source('incubationDistSens.R') # Assumes samples are acquired within sampleDelay days of onset
-#source('incubationDist.R')
+#source('incubationDistSens.R') # Assumes samples are acquired within sampleDelay days of onset
 source('epiFunctions.R')
 baseline <- mean(cases$count)
 recallEffect <- 0.65 # after 1 week
@@ -31,14 +31,13 @@ expectedShelfLife <- 2 # weeks
 
 > This supplementary material is hosted by Eurosurveillance as supporting information alongside the article _Use of model-based projections during the 2017-2018 listeriosis outbreak in South Africa_ on behalf of the authors who remain responsible for the accuracy and appropriateness of the content. The same standards for ethics, copyright, attributions and permissions as for the article apply. Eurosurveillance is not responsible for the maintenance of any links or email addresses provided therein.
 
-## Baseline cases
+## Characterization of noise in observed case numbers
 
-The expected baseline number of cases was set to the mean weekly number of cases for Week 40 of 2017 through week 8 of 2018 (`r round(baseline,1)`). Observed variation around this mean was approximately Poisson distributed (Table X), so Poisson noise around the expected value is assumed in the model.
+As described in the main text, therere an average of `r round(baseline,1)` weekly cases from Week 40 of 2017 through Week 8 of 2018. We fit Poisson and Negative Binomial error distributions to the case data from this timeframe using maximum likelihood and compared fits using Akaike's Information Criterion (AIC). Lower AIC values indicate better models. Observed variation around the mean value was better characterized by the Poisson model (Table \ref{tab:noise}), so we assumed Poisson noise around the expected value in the projections.
 
-```{r baseline, echo=FALSE}
-ep <- exposureProfile(baseline,recallEffect)
-minGen <- qpois(0.025,ep$riskExp)
-maxGen <- qpois(0.975,ep$riskExp)
+```{r noise, echo=FALSE}
+tmp <- tibble(Model = c('Poisson', 'Negative Binomial'), AIC = c(AIC(pfit),AIC(nbfit)))
+knitr::kable(tmp, digits = 2, caption = '\\label{tab:noise}Model fits for characterization of noise in case numbers.')
 ```
 
 
@@ -47,9 +46,9 @@ maxGen <- qpois(0.975,ep$riskExp)
 An initial assessment suggests that the product recall was `r recallEffect*100`\% effective within one week. We assume a corresponding decline in risky exposures over this timeframe, but this assumption is easily modifiable should better information become available. We assume a further geometric decline through time as the remaining contaminated product is consumed or discarded. We have initially assumed the average remaining time that the contaminated product poses a risk is `r round(expectedShelfLife,1)` weeks. This time may actually be shorter, and the assumption is easily modified. The resulting temporal profile for risky exposures is represetnted below (Figure 1A).
 
 ```{r exposure, echo=FALSE}
-ep <- exposureProfile(baseline,recallEffect)
-minGen <- qpois(0.025,ep$riskExp)
-maxGen <- qpois(0.975,ep$riskExp)
+# ep <- exposureProfile(baseline,recallEffect)
+# minGen <- qpois(0.025,ep$riskExp)
+# maxGen <- qpois(0.975,ep$riskExp)
 ```
 
 ## Anticipated future cases
@@ -57,36 +56,43 @@ maxGen <- qpois(0.975,ep$riskExp)
 The number of future cases is determined by two primary factors: the temporal profile of risky exposures and the incubation period. The incubation period distribution has been characterized, initially, based on data from previous outbreaks in Europe and the US (see Goulet _et al_. 2013 _BMC Infectious Diseases_, Figure 1B). As data on the incubation period becomes available for the current outbreak in South Africa, we will use these data to update estimates that are likely to be more relevant for this outbreak, given the differences in background population and the source of exposure. Note that we cannot confidently capture the tail of the distribution based on the data available.
 
 ```{r,echo=FALSE,fig.width=7.5, fig.height=3, fig.cap='(A) Temporal profile of risky expsoures, shown as plausible range for future cases generated each week, based on the stated model assumptions. (B) Comparison of non-parametric (grey) and parametric (green) survival analyses for incubation data. Based on data from Goulet 2013.'}
-par(mar=c(5,4,2,2), mfcol=c(1,2))
-plot(ep$week+.5,rep(NA,nrow(ep)),ylim=c(0,45),bty='L',ann=F,yaxt='n',xaxt='n',yaxs='i',xpd=T,type='s',lwd=3)
-arrows(ep$week+.5,minGen,ep$week+.5,maxGen,le=.02,angle = 90,lwd=3,code = 3,xpd=T,col='darkgrey')
-axis(2,seq(0,45,5),cex.axis=.85)
-axis(1,seq(1,18,2),cex.axis=.85)
-mtext('Week of the year',1,3)
-mtext('Future cases generated',2,2.5)
-mtext('A',3,line=1,adj=-.3,font=2)
+# par(mar=c(5,4,2,2), mfcol=c(1,2))
+# plot(ep$week+.5,rep(NA,nrow(ep)),ylim=c(0,45),bty='L',ann=F,yaxt='n',xaxt='n',yaxs='i',xpd=T,type='s',lwd=3)
+# arrows(ep$week+.5,minGen,ep$week+.5,maxGen,le=.02,angle = 90,lwd=3,code = 3,xpd=T,col='darkgrey')
+# axis(2,seq(0,45,5),cex.axis=.85)
+# axis(1,seq(1,18,2),cex.axis=.85)
+# mtext('Week of the year',1,3)
+# mtext('Future cases generated',2,2.5)
+# mtext('A',3,line=1,adj=-.3,font=2)
 
-par(mar=c(5,4,2,1))
-plot(npmle_perInc,ylim=c(0,1),bty='L',ann=F,yaxt='n',yaxs='i',xpd=NULL)
-axis(2,seq(0,1,.4),cex.axis=.85)
-axis(2,seq(.2,1,.4),cex.axis=.85)
-mtext('Time since infection (days)',1,3)
-mtext('Proportion incubating',2,2.5)
-mtext('B',3,line=1,adj=-.3,font=2)
-curve(1-pgamma(x,meanIncGamma*rateIncGamma,rateIncGamma),add=T,lwd=3,col='darkgreen')
-points(meanIncGamma,1.1,pch=21,cex=1.1,xpd=T,col='darkgreen',lwd=3)
-arrows(ciIncGamma[1],1.1,ciIncGamma[2],1.1,le=.02,angle = 90,lwd=3,code = 3,col='darkgreen',xpd=T)
-mtext('Mean and 95% CI',3,line=.5,adj=1.1,font=2,col='darkgreen',cex=.8,xpd=NULL)
-abline(v=3.5+seq(0,70,7),col='red',lty=3,xpd=F)
+# par(mar=c(5,4,2,1))
+# plot(npmle_perInc,ylim=c(0,1),bty='L',ann=F,yaxt='n',yaxs='i',xpd=NULL)
+# axis(2,seq(0,1,.4),cex.axis=.85)
+# axis(2,seq(.2,1,.4),cex.axis=.85)
+# mtext('Time since infection (days)',1,3)
+# mtext('Proportion incubating',2,2.5)
+# mtext('B',3,line=1,adj=-.3,font=2)
+# curve(1-pgamma(x,meanIncGamma*rateIncGamma,rateIncGamma),add=T,lwd=3,col='darkgreen')
+# points(meanIncGamma,1.1,pch=21,cex=1.1,xpd=T,col='darkgreen',lwd=3)
+# arrows(ciIncGamma[1],1.1,ciIncGamma[2],1.1,le=.02,angle = 90,lwd=3,code = 3,col='darkgreen',xpd=T)
+# mtext('Mean and 95% CI',3,line=.5,adj=1.1,font=2,col='darkgreen',cex=.8,xpd=NULL)
+# abline(v=3.5+seq(0,70,7),col='red',lty=3,xpd=F)
 ```
 
 Combining the temporal profile for risky exposures and the estimated distribution of the incubation period, we can begin to assess the anticipated decline in the epidemic curve as a result of increased awareness and product recall. Figure 2 shows plausible ranges for the number of cases under the assumptions of the model.
 
 ```{r,echo=FALSE,fig.width=4, fig.height=4, fig.cap='Range of cases expected through time, from Week 8 to Week 18 of 2018.'}
-weekRange <- 8:18
-par(mar=c(5,4,2,2))
-plot(weekRange,rep(NA,11),ylim=c(0,45),bty='L',yaxs='i',xlab='Week of the year',ylab='Anticipated number of cases')
-arrows(weekRange,projCurve(minGen)[weekRange],weekRange,projCurve(maxGen)[weekRange],le=.02,angle = 90,lwd=3,code = 3,col='darkblue',xpd=T)
+# weekRange <- 8:18
+# par(mar=c(5,4,2,2))
+# plot(weekRange,rep(NA,11),ylim=c(0,45),bty='L',yaxs='i',xlab='Week of the year',ylab='Anticipated number of cases')
+# arrows(weekRange,projCurve(minGen)[weekRange],weekRange,projCurve(maxGen)[weekRange],le=.02,angle = 90,lwd=3,code = 3,col='darkblue',xpd=T)
 ```
 
 The code for all analyses and the original report containing the projections are available at DOI: [10.5281/zenodo.2244314](dx.doi.org/10.5281/zenodo.2244314).
+
+### Caveats for consideration. 
+
+The following caveats were emphasized in the report:
+- Note that we cannot confidently capture the tail of the distribution based on the data available.
+- This time may actually be shorter, and the assumption is easily modified. 
+- As data on the incubation period becomes available for the current outbreak in South Africa, we will use these data to update estimates that are likely to be more relevant for this outbreak, given the differences in background population and the source of exposure.
